--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "framer-motion": "^4",
     "next": "12.0.7",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sass": "^1.45.0",
+    "swiper": "^7.3.3"
   },
   "devDependencies": {
     "@types/node": "16.11.12",
